Bug 865915 - Fixed unmatched JS_EndRequest. r=mccr8